# Input_production

./: .gitattributes  .gitignore  CITATION.cff  CMIP_daily_download.py  CRUJRA-scratch.ipynb  LICENSE  PIPELINE.md  README.md  UserGuide.docx  Worldclim-scratch.ipynb  co2.nc  config.yaml  create_mask.py  create_mask.sh  data_download.sh  demo_Worldclim.ipynb  demo_baseline_correction_downscale.ipynb  demo_create_tile_and_load_data.ipynb  demo_to_TEM.ipynb  dev-tile-create-and-import-data.ipynb  downscaling_timedim.py  environment.yml  pyproject.toml  resampling.sh  resampling_crujra.py  site_ancillary_input_formating.py  tbc_WIP_demo2.py  tbc_WIP_pipeline_driver.py  tile-test-load-and-downscale.ipynb  tiles-downscale-scratch.ipynb  tiles-scratc.ipynb  tiling.sh  tiling_croping.py
climate/script/: ERA5_download.py  Resampling_CRUJRA.sh  Resampling_ERA5.sh  Resampling_WORLDCLIM2.sh  crujra_unzip.py
demos/: demo_topo.py  demo_worldclim.py
dev-scripts/: dev-multi-tile.ipynb  fix-cru-mask.py  tiles-scratch.ipynb
dev_scripts/: better-clipping-poc.py  fix-cru-mask.py  qdm-dev.ipynb  scratch_compare.py  tile-test-load-and-downscale.ipynb  upgrage_crujra_arctic_to_standard.py
docs/: testing_generators.md
examples/: pipeline_simple.yaml  pipeline_temrs.yaml
mask/: Create_mask.txt
original-scripts/: data_download.sh  downscaling.sh  transfer.sh
original-scripts/utils/: merge_out_synth.py
sample_CDL_spec/: README.md  fill_files.py  make_empty_files.sh
sample_CDL_spec/CDL_spec_files/: co2.nc.cdl  drainage.nc.cdl  fri-fire.nc.cdl  historic-climate.nc.cdl  historic-explicit-fire.nc.cdl  projected-climate.nc.cdl  projected-co2.nc.cdl  projected-explicit-fire.nc.cdl  run-mask.nc.cdl  soil-texture.nc.cdl  (+2 more)
source/: AOIMask.py  CloudShellBucketFiller.py  TileEngine.py  crujra.py  mask.py  remote_zip.py  test.py  tile.py  tiling.py  util.py  worldclim.py
tests/: conftest.py  test_aoi.py  test_basic.py  test_cloudshellbucketfiller.py  test_crujra.py  test_generators.py  test_pipeline.py  test_tile.py  test_topo.py  test_workflow_schema.py  test_worldclim.py
utils/: triangulation.py
(+73 files in other folders)
