[build-system]
requires = [
  "setuptools>=61.0",
  "versioningit" 
]
# Including versioningit in the build system requires seems to work for 
# "distributions" but does not stay up-to-date when running code in development
# development... seems like we need to specify tool in environemnt.yml file for 
# that...

build-backend = "setuptools.build_meta"




[project]
name = "temds"
dynamic = ["version"]
license = {file = "LICENSE.txt"}
description = 'TODO'
requires-python = ">=3.8"
keywords = []
authors = [
  { name = "Tobey Carman", email = "tcarman2@alaska.edu " },
  { name = "Rawser Spicer", email = "rwspicer@alaska.edu" },
  { name = "Helene Genet", email = "hgenet@alaska.edu" },
]
maintainers = [
  { name = "Tobey Carman", email = "tcarman2@alaska.edu " },
  { name = "Rawser Spicer", email = "rwspicer@alaska.edu" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
]

[tool.setuptools.dynamic]

[tool.versioningit]

[project.urls]
Homepage = "https://github.com/uaf-arctic-eco-modeling/Input_production"

[project.scripts]
TEMdownscale = "temds.cli:app"
